working bomb, need to test detonator and pause